# CworkingProjects

./: .gitignore  README.md
BerkleySocketsTask/: CMakeLists.txt  main.c
DZ1/: CMakeLists.txt  Pseudocode
DZ1/Source/: eocdr.c  main.c
DZ1/lib/: CMakeLists.txt  cfh.c  eocdr.h
DZ1/src/: CMakeLists.txt  main.c
DZ2/: main  pseudocode  target
DZ2/Source/: main.c
DailyTasks/EPollEcho/: main.c
DailyTasks/HttpTask/: CMakeLists.txt  main.c
HashTablesTask/: .gitignore  Псевдокод.txt
HashTablesTask/rework/: .clang-format  CMakeLists.txt  Tests.c  forward_list.c  forward_list.h  hash.c  hash.h  hash_table.c  hash_table.h  hash_table_list.c  hash_table_open.c  main.c  open_hash_struct.c  open_hash_struct.h
HashTablesTask/src/: CMakeLists.txt  hash.c  hash.h  hash_table_value.c  hash_table_value.h  list_hash.c  list_hash.h  main.c  open_hash.c  open_hash.h
LibrariesTask/: CMakeLists.txt  main.c
Source/: cfh.c  cfh.h  eocdr.c  eocdr.h  readBits.c  readBits.h
testing/: main
testing/Source/: main.c
